--- a/css/creative.css
+++ b/css/creative.css
@@ -44,7 +44,7 @@ h6 {
 }
 
 .bg-primary {
-  background-color: #F05F40 !important;
+  background-color: #A2D5DE !important;
 }
 
 .bg-dark {
@@ -288,7 +288,7 @@ header.masthead p {
 }
 
 .text-primary {
-  color: #F05F40 !important;
+  color: #EEC6BE !important;
 }
 
 .btn {
